[project]
name = "pokemon-battling"
version = "0.1.0"
description = ""
authors = [
    {name = "Ryan, Wendell, Mahnoor"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "numpy (>=2.2.3,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
